Login[ Error Fixed in Login Page]

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,22 @@
     rel="stylesheet">
   <title>IMMERSIS</title>
 </head>
+<!-- <style>
+  .video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+  }
+
+  .video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+</style> -->
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
